--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           };
         };
       })(this);
-      image.src = "spaceship.gif";
+      image.src = "https://raw.githubusercontent.com/bjr24/asteroids/master/spaceship.gif";
       this.setInitialPosition();
     }
 
@@ -272,7 +272,7 @@
       };
     };
 
-    image.src = "asteroid-img.png";
+    image.src = "https://raw.githubusercontent.com/bjr24/asteroids/master/asteroid-img.png";
 
     function Asteroid(size, parent, first) {
       this.size = size != null ? size : 2;
