--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       this.length = this.height;
       this.xForce = 0;
       this.yForce = 0;
-      this.loadImage("asteroid-img.png", this.size / 4);
+      this.loadImage("https://raw.githubusercontent.com/bjr24/asteroids/master/asteroid-img.png", this.size / 4);
       if ((parent != null)) {
         this.x = parent.x;
         this.y = parent.y;
