--- a/index.html
+++ b/index.html
@@ -374,5 +374,14 @@
 </head>
 <body>
 <canvas id="gameCanvas" width="640" height="480" style="border: 1px solid black"></canvas>
+
+<p>
+Controls: 
+<p><b>z :</b> Rotate left</p>
+<p><b>x :</b> Rotate right</p>
+<p><b>, :</b> Move forward</p>
+<p><b>. :</b> Shoot </p>
+</p>
+
 </body>
 </html>
