--- a/asteroids.html
+++ b/asteroids.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <title>Asteroids</title>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="fabric.js"></script>
     <script src="asteroids.js"></script>
 </head>
 <body>
+
 <canvas id="gameCanvas" width="640" height="480" style="border: 1px solid black"></canvas>
+<!--<canvas id="gameCanvas" width="960" height="720" style="border: 1px solid black"></canvas>-->
+
+<p>Number of asteroids: <span id="asteroidCount"></span></p>
 </body>
 </html>
