--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       return height = image.height * imageScaleScaleFactor;
     };
 
-    image.src = "spaceship.gif";
+    image.src = "https://raw.githubusercontent.com/bjr24/asteroids/master/spaceship.gif";
 
     function Ship() {
       this.update = __bind(this.update, this);
@@ -384,7 +384,7 @@
       return imageWidth = image.width;
     };
 
-    image.src = "asteroid-img.png";
+    image.src = "https://raw.githubusercontent.com/bjr24/asteroids/master/asteroid-img.png";
 
     scoreTable = {
       3: 20,
