Use Vec2 instead of x and y

--- a/asteroids.html
+++ b/asteroids.html
@@ -12,5 +12,10 @@
 
 <p>Score: <span id="scoreDisplay">0</span></p>
 <p>Number of asteroids: <span id="asteroidCount">0</span></p>
+
+
+<img id="flower-btn" src="fireflower.gif" width="60" height="30" />
+<img id="mushroom-btn" src="mushroom.png" width="35" height="30" />
+
 </body>
 </html>
