--- a/asteroids.html
+++ b/asteroids.html
@@ -3,8 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Asteroids</title>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <!--<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>-->
+    <script src="jquery-1.11.0.js"></script>
     <script src="asteroids.js"></script>
+
 </head>
 <body>
 
@@ -14,8 +16,9 @@
 <p>Number of asteroids: <span id="asteroidCount">0</span></p>
 
 
-<img id="flower-btn" src="fireflower.gif" width="60" height="30" />
-<img id="mushroom-btn" src="mushroom.png" width="35" height="30" />
+<img id="flower-btn" src="img/fireflower.gif" width="60" height="30" />
+<img id="mushroom-btn" src="img/mushroom.png" width="35" height="30" />
+<img id="star-btn" src="img/star.png" width="20" height="20" />
 
 </body>
 </html>
