use koopa shells

--- a/asteroids.html
+++ b/asteroids.html
@@ -13,6 +13,7 @@
 <canvas id="gameCanvas" width="640" height="480" style="border: 1px solid black"></canvas>
 
 <p>Score: <span id="scoreDisplay">0</span></p>
+<p>Hits: <span id="hitsDisplay">0</span></p>
 <p>Number of asteroids: <span id="asteroidCount">0</span></p>
 
 
