--- a/asteroids.html
+++ b/asteroids.html
@@ -10,9 +10,10 @@
 </head>
 <body>
 
-<canvas id="gameCanvas" width="640" height="480" style="border: 1px solid black"></canvas>
+<canvas id="gameCanvas" width="1200" height="600" style="border: 1px solid black"></canvas>
 
 <p>Score: <span id="scoreDisplay">0</span></p>
+<p>Coins: <span id="coinDisplay">0</span></p>
 <p>Hits: <span id="hitsDisplay">0</span></p>
 <p>Number of asteroids: <span id="asteroidCount">0</span></p>
 
