Add controls info to page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <p>Hits: <span id="hitsDisplay">0</span></p>
 <p>Number of asteroids: <span id="asteroidCount">0</span></p>
 
+<p>Move with arrow keys. Shoot with space bar</p>
 
 <img id="flower-btn" src="img/fireflower.gif" width="30" height="30" />
 <img id="mushroom-btn" src="img/mushroom.png" width="30" height="30" />
